--- a/個人導向工程架構.md
+++ b/個人導向工程架構.md
@@ -25,15 +25,15 @@
 <pre>
 📁 my-ai-system/
  ├─ projects/                 🧩 專案主層（每個主題各自獨立）
- │   ├─ ai_report_generator/
- │   │   ├─ scripts/
- │   │   ├─ prompts/
- │   │   ├─ data/
- │   │   └─ results/
- │   ├─ poem_ai/
- │   │   ├─ src/
- │   │   ├─ prompts/
- │   │   └─ demo_app/
+ │   ├─ ai_report_generator/  🧩 這是一個「AI 生成報告」的專案
+ │   │   ├─ scripts/          🧱 放這個專案的 Python 腳本
+ │   │   ├─ prompts/          🧠 放這個專案專屬的提示詞 (Prompt)
+ │   │   ├─ data/             🔌 放輸入測試資料
+ │   │   └─ results/          🧹 放輸出的結果報告或生成文字
+ │   ├─ poem_ai/              🧱 AI 生成詩的專案
+ │   │   ├─ src/              🧠 主要邏輯（如生成詩的主程式）
+ │   │   ├─ prompts/          🔌 放生成詩用的 Prompt
+ │   │   └─ demo_app/         🧹 實際運行的小應用（通常使用 Streamlit 或 Gradio）
  │   └─ ...
  │
  ├─ core/                     🧠 共用邏輯層（AI 腦袋）
@@ -61,15 +61,15 @@
  │   ├─ microapps/            🧠 小型互動應用（測試器、DEMO）
  │   └─ configs/              ⚙️ 執行設定與模型參數
  │
- ├─ registry/                 🧾 模組登錄中心（版本與依賴）
- │   ├─ index.json
- │   ├─ lockfile.json
- │   └─ changelog.md
+ ├─ registry/                 🧾 管理「系統與模組的版本、依賴、更新歷程」
+ │   ├─ index.json            🧩 模組索引檔
+ │   ├─ lockfile.json         💬 版本鎖定檔
+ │   └─ changelog.md          ⚙️ 版本更新紀錄
  │
- ├─ docs/                     📘 文件與方法論筆記
- │   ├─ architecture.md
- │   ├─ build_process.md
- │   └─ experiments.md
+ ├─ docs/                     📘 管理「系統的思考、設計與實驗紀錄」
+ │   ├─ architecture.md       🌍 系統架構文件
+ │   ├─ build_process.md      🚀 組裝與部署流程
+ │   └─ experiments.md        🧠 實驗與測試紀錄
  │
  └─ README.md                 📖 專案總說明
 </pre>
