--- a/1.md
+++ b/1.md
@@ -1,23 +1,3 @@
-非常好 ✅
-明白你的意思：
-你要的是一份正式、工程化、完整可落地的
-
-> 📘 **模組化創作系統方法論 2.0**
-
-特點如下：
-
-* 架構基於「個人導向工程 2.0」資料結構（即你現在的 `projects / core / shared / dev / app / registry / docs`）
-* 結合之前的模組化思維（Prompt + Code + GEM）
-* 以 **工程文件風格** 呈現，
-  👉 有明確段落、表格、範例與操作說明。
-
----
-
-以下是完整可直接放在 GitHub `/docs/methodology_2.0.md` 的正式文件：
-
----
-
-````markdown
 # 🧩 模組化創作系統方法論 2.0（個人導向工程架構版）
 
 > 以「模組化思維」重構個人創作與開發流程，  
@@ -102,174 +82,29 @@
 ## 🔁 六、系統運作流程
 
 ```mermaid
-graph TD
-A[dev/ 實驗與組裝] --> B[projects/ 專案整合 Prompt 與功能]
-B --> C[core/ 提供功能模組 GEM]
-C --> D[shared/ 提供共用工具與設定]
-D --> E[tools/build_*.py 自動組裝]
-E --> F[app/ 生成可部署版本]
-F --> G[Railway / Web 運行]
-G --> H[registry/ 登錄版本與依賴]
-H --> I[docs/ 更新方法論與歷程]
-````
-
----
-
-## 🧰 七、實作規範與範例
-
-### 📁 1. 專案層 `projects/`
-
-放置主題專案，內容包含專案邏輯、Prompt、測試資料與結果。
-
-```bash
-projects/
- ├─ ai_report_generator/
- │   ├─ scripts/
- │   │   ├─ analyze_data.py
- │   │   └─ generate_report.py
- │   ├─ prompts/
- │   │   ├─ write_report.md
- │   │   └─ refine_tone.md
- │   ├─ data/
- │   │   └─ sample_input.json
- │   └─ results/
- │       └─ report_output.md
+graph LR
+A[💡 dev/ 實驗與組裝] --> B[🧩 projects/ 專案整合 Prompt 與功能]
+B --> C[🧠 core/ 提供功能模組 GEM]
+C --> D[🧱 shared/ 共用工具與設定支援]
+D --> E[⚙️ tools/build_*.py 自動組裝]
+E --> F[🚀 app/ 生成可部署版本]
+F --> G[☁️ Railway / Web 運行]
+G --> H[🧾 registry/ 登錄版本與依賴]
+H --> I[📘 docs/ 更新方法論與歷程]
 ```
-
 📘 **說明：**
+| 流程階段            | 功能             | 輸入           | 輸出        |
+| --------------- | -------------- | ------------ | --------- |
+| 💡 `dev/`       | 原型開發、Prompt 測試 | 初始概念         | 可運行的測試結果  |
+| 🧩 `projects/`  | 組合 Prompt + 程式 | 模組、Prompt    | 專案原型      |
+| 🧠 `core/`      | 提供通用邏輯         | 工具、模組        | GEM（功能組件） |
+| 🧱 `shared/`    | 共用設定與模板        | 設定、通用 Prompt | 標準化支援     |
+| ⚙️ `dev/tools/` | 自動組裝與同步        | 配方 JSON、模組   | 編譯後成品     |
+| 🚀 `app/`       | 運行與展示          | 組裝後的應用       | 可上線版本     |
+| ☁️ Railway      | 雲端部署           | 應用程式         | 網頁服務      |
+| 🧾 `registry/`  | 紀錄版本與依賴        | 模組資訊         | 系統狀態與歷史   |
+| 📘 `docs/`      | 方法論、實驗筆記       | 專案結果         | 知識回饋與文件更新 |
 
-* `scripts/`：核心邏輯，可引用 `core/` 模組
-* `prompts/`：專案專用 Prompt，可引入 `shared/base_prompts`
-* `data/`：測試或樣本資料
-* `results/`：生成結果，可用於版本比對
-
----
-
-### 🧠 2. 邏輯層 `core/`
-
-放置通用邏輯模組（GEM），例如資料解析、分析、文字生成等。
-
-```bash
-core/
- ├─ adapters/
- │   └─ llm_adapter.py
- ├─ utils/
- │   └─ text_cleaner.py
- ├─ bundles/
- │   ├─ report_builder/
- │   │   ├─ structure_analysis.py
- │   │   ├─ section_writer.py
- │   │   └─ summary_formatter.py
- │   └─ poem_generator/
- │       └─ rhyme_engine.py
-```
-
-📘 **說明：**
-
-* 每個子資料夾（如 `report_builder`）是一個 GEM。
-* 內部依照單一職責原則拆分模組。
-* 所有模組應支援單元測試。
-
----
-
-### 🧱 3. 共用層 `shared/`
-
-集中存放跨專案可重用的素材與設定。
-
-```bash
-shared/
- ├─ base_prompts/
- │   ├─ system_policy.md
- │   ├─ format_json.md
- │   └─ summarization_rules.md
- ├─ utils/
- │   ├─ logger.py
- │   └─ formatter.py
- ├─ adapters/
- │   └─ http_client.py
- └─ settings/
-     └─ env_template.json
-```
-
-📘 **說明：**
-
-* `base_prompts/`：通用提示詞模板
-* `settings/`：全域設定（API Key、模型參數）
-* `utils/`：所有共用工具函式
-* 統一由 `core/` 或 `projects/` 引用
-
----
-
-### ⚙️ 4. 開發層 `dev/`
-
-實驗與自動化的中繼層，負責組裝與測試。
-
-```bash
-dev/
- ├─ notebooks/
- │   └─ prototype_experiment.ipynb
- ├─ scripts/
- │   └─ test_build.py
- ├─ sandbox/
- │   └─ ai_poem_game/
- └─ tools/
-     ├─ build_prompt.py
-     ├─ build_code.py
-     └─ deploy_to_railway.py
-```
-
-📘 **說明：**
-
-* `tools/`：所有自動化組裝與部署腳本
-* `sandbox/`：獨立玩具專案，概念測試用
-* `notebooks/`：可與 Colab 同步的測試環境
-
----
-
-### 🚀 5. 運行層 `app/`
-
-最終部署層，存放自動生成的程式與提示詞。
-
-```bash
-app/
- ├─ api/
- │   └─ main.py
- ├─ code/
- │   └─ pipeline.py
- ├─ prompts/
- │   └─ final_prompt.md
- ├─ microapps/
- │   └─ gem_tester/app.py
- └─ configs/
-     └─ model_config.json
-```
-
-📘 **說明：**
-
-* 所有檔案由組裝腳本生成。
-* `api/` 為伺服器主程式（FastAPI / Flask）
-* `microapps/` 可對應每個專案的小型展示工具
-
----
-
-### 🧾 6. 登錄層 `registry/`
-
-紀錄版本、模組與依賴狀態。
-
-```bash
-registry/
- ├─ index.json
- ├─ lockfile.json
- └─ changelog.md
-```
-
-📘 **說明：**
-
-* `index.json`：模組索引
-* `lockfile.json`：環境鎖定
-* `changelog.md`：版本更新紀錄
-
----
 
 ### 📘 7. 文件層 `docs/`
 
