Update and rename 個人導向工程架構.md to 0.個人導向工程架構.md

--- a/0.個人導向工程架構.md
+++ b/0.個人導向工程架構.md
@@ -1,4 +1,4 @@
-# 🧩 Modular AI System — 個人導向工程架構（自用版）
+# 🧩 Modular AI System — 個人導向工程架構
 
 > 一套為「個人開發者」設計的 AI 系統架構，  
 > 結合工程邏輯與創作流程，讓你可以快速實驗、整理、上線。  
